todoyu timetracking changelog

timetracking 1.1.4 - not released yet
	* Bugfix: Progress bar inside timetracking headlet was not updated in realtime

timetracking 1.1.3 - 2011-12-13
	* Bugfix: Sub tasks were marked as running too
	* Added: TimetrackingProject (+Manager)
	* Added: TimetrackingTaskPreset (+Manager)
	* Added: ext_timetracking_workload_done to task preset
	* Changed: Used task type differentiated task tabs registration, incremented project dependency to 1.3.0
	* Changed: Renamed TodoyuTimetrackingSysmanagerRenderer => TodoyuTimetrackingSysmanagerManager
	* Changed: Task preset DB rename of start_tracking => ext_timetracking_start_tracking

timetracking 1.1.2 - 2011-11-17
	* Changed: Timetracking does not add anymore contextmenu items to deleted tasks
	* Changed: Don't hide open timetracking headlet when tracking is active
	* Translation: Polish

timetracking 1.1.1 - 2011-09-15
	* Bugfix: Spelling mistake in rights (track - editOwn, editOwnChargeable)
	* Added: Hooks: timetracking.start, timetracking.stop
	* Changed: Timetracking icon (changed from alarm clock to stopwatch)
	* Changed: Add field for task presets directly to the fieldset quicktaskSpecific
	* Changed: Adapted registered hooks due rename in project extension

timetracking 1.1.0 - 2011-06-17
	* Feature: Extended task CSV export with tracked time sum
	* Feature: Extended task CSV export with chargeable time
	* Feature: Change status color of task in timetracking headlet on status change
	* Feature: Rights Cleanup - Fixed missing init methods in controller
	* Feature: Added rights checks
	* Changed: Requires core 2.1
	* Changed: Structure for 2.1
	* Changed: All classes are prefixed with extension name

timetracking 1.0.6
	* Bugfix: Quicktask creation option "start timetracking" was shown to persons w/o timetracking access
	* Bugfix: Timetracking task filter joins were not separated from where, query used 100% of MySQL resources
	* Bugfix: Last tracked tasks in timetracking headlet