@@ -1,6 +1,7 @@
 todoyu timetracking changelog
 
 timetracking 1.1.4 - not released yet
+	* Added: Starting first tracking of task of person in current day immediately stores a 0:00 track, visible for other persons as well (was previously stored not until stopping the tracking) 
 	* Bugfix: Progress bar inside timetracking headlet was not updated in realtime
 
 timetracking 1.1.3 - 2011-12-13
